Try fix (own) broken styles

--- a/frontend/styles/common.styl
+++ b/frontend/styles/common.styl
@@ -442,7 +442,8 @@
   transition-duration 0.5s
   transition-property opacity,filter
   opacity 1
-  @media not (max-width:567px)
+@media not (max-width:567px)
+  .vote-list-box
     display inline-block
     position absolute
     border-color #58b
@@ -463,7 +464,8 @@
       top 40px
     .close-button
       display none
-  @media (max-width:567px)
+@media (max-width:567px)
+  .vote-list-box
     position fixed
     left 0
     top 0
@@ -478,7 +480,9 @@
 
 .vote-list-wrapper
   overflow-y hidden
-  @media not (max-width:567px)
+
+@media not (max-width:567px)
+  .vote-list-wrapper
     max-height 320px
 
 .vote-list
